tests/lustre/typechecking/shouldFail/test_circular_node_eqns.lus
node top(x: int) returns (y: int);
var l: int;
var p: int;
let
  l = p;
  p = l;
tel
